ArgoCD/ingress-argocd.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-server-ingress-http
  namespace: argocd
  annotations:
    ingress.kubernetes.io/proxy-body-size: 100M
    ingress.kubernetes.io/app-root: "/"
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
spec:
  ingressClassName: "nginx"
  rules:
  - host: "argocd.luancarlos.duckdns.org"
    http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: argocd-server
            port:
              number: 443
  tls:
  - hosts:
      - "argocd.luancarlos.duckdns.org"
    secretName: argocd-secret
